# Devmind

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml
backend/django/: .coverage 13  .coverage 2  .coverage 3  .coverage 4  .coverage 6  Dockerfile  conftest.py  manage.py  pyproject.toml  schema.yml
backend/django/apps/accounts/: admin.py  encryption.py  managers.py  models.py  oauth.py  serializers.py  urls.py  views.py
backend/django/apps/accounts/migrations/: 0001_initial.py  0002_customuser_avatar_url_customuser_github_id_and_more.py  0003_user_llm_config.py
backend/django/apps/accounts/tests/: test_byok.py  test_models.py  test_oauth.py  test_views.py
backend/django/apps/core/: logging 2.py  metrics 2.py
backend/django/apps/organizations/: admin.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/django/apps/organizations/migrations/: 0001_initial.py
backend/django/apps/organizations/tests/: factories.py  test_views.py
backend/django/apps/repositories/: admin.py  apps.py  exceptions.py  managers.py  models.py  serializers.py  services.py  tasks.py  types.py  urls.py  views.py  webhooks.py
backend/django/apps/repositories/migrations/: 0001_initial_repository_model.py
backend/django/apps/repositories/tests/: factories.py  test_managers.py  test_models.py  test_services.py  test_tasks.py  test_views.py  test_webhooks.py
backend/django/apps/reviews/: admin.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/django/apps/reviews/migrations/: 0001_initial.py  0002_reposcan_scan_id_reposcan_summary.py
backend/django/apps/reviews/services/: __init__.py  github_poster 3.py  orchestrator.py
backend/django/apps/reviews/tests/: factories.py  test_github_poster.py  test_kafka.py  test_models.py  test_orchestrator.py  test_views.py
backend/django/devmind/: asgi.py  celery.py  kafka.py  urls.py  wsgi.py
backend/django/devmind/settings/: base.py  development.py  production.py  test.py
backend/django/realtime/: __init__ 4.py  apps 2.py  consumers 5.py  events 5.py  routing 4.py
backend/django/realtime/tests/: test_consumers.py
backend/django/tests/: test_e2e.py
backend/fastapi/: .coverage 3  .dockerignore  Dockerfile  conftest.py  main.py  pyproject.toml
backend/fastapi/agents/: __init__.py  review_agent.py  states.py
backend/fastapi/core/: config.py  database.py  logging.py  metrics.py  security.py
backend/fastapi/models/: embeddings.py  review.py
backend/fastapi/routers/: embeddings.py  health.py  review.py  scan.py
backend/fastapi/services/: code_parser.py  github_client.py  llm_client.py  openai_client.py  prompt_builder.py  rate_limiter.py  supabase_client.py  vector_store.py
backend/fastapi/tests/: test_agents.py  test_core.py  test_embeddings.py  test_health.py  test_llm_client.py  test_parser.py  test_parser_extra.py  test_prompt_builder.py  test_rate_limiter.py  test_review.py  test_scan.py  test_supabase_client.py  test_vector_store.py  test_vector_store_extra.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig 2.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  repositories.ts  reviews.ts  scan.ts  settings.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/components/review/: CommentOverlay.tsx  CommentThread.tsx  DiffViewer.tsx  ReviewStatus.tsx
frontend/src/components/ui/: index.ts
frontend/src/hooks/: useAuth.ts  useReview.ts
frontend/src/lib/: supabase.ts
frontend/src/mocks/: browser.ts  data.ts  handlers.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  Repositories.tsx  ReviewDetail.tsx  ScanReport.tsx  Settings.tsx
frontend/src/store/: index.ts  repositorySlice.ts  reviewSlice.ts
grafana/provisioning/dashboards/: dashboard.yml  devmind-overview.json
grafana/provisioning/datasources/: datasource.yml
nginx/: nginx.conf
prometheus/: prometheus.yml
