[project]
name = "devmind-django"
version = "0.1.0"
description = "DevMind Django backend"
authors = [{name = "Muhammed Sinan", email = "muhammedsiinanmp@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-cors-headers>=4.3,<5.0",
    "django-environ>=0.11,<0.12",
    "celery[redis]>=5.4,<6.0",
    "django-celery-beat>=2.6,<3.0",
    "django-celery-results>=2.5,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "dj-database-url>=2.1,<3.0",
    "httpx>=0.27,<0.28",
    "sentry-sdk[django]>=2.5,<3.0",
    "cryptography>=42.0,<43.0",
    "PyGithub>=2.3,<3.0",
    "redis>=5.0,<6.0",
    "django-redis>=5.4,<6.0",
    "whitenoise>=6.6,<7.0",
    "gunicorn>=22.0,<23.0",
    "requests>=2.33.1,<3.0",
    "structlog>=24.1,<25.0",
    "tenacity>=8.3,<9.0",
    "channels>=4.0,<5.0",
    "channels-redis>=4.2,<5.0",
    "daphne>=4.0,<5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "factory-boy>=3.3,<4.0",
    "responses>=0.25,<0.26",
    "freezegun>=1.4,<2.0",
    "mypy>=1.10,<2.0",
    "django-stubs[compatible-mypy]>=5.0,<6.0",
    "djangorestframework-stubs>=3.15,<4.0",
    "black>=24.4,<25.0",
    "django-extensions>=3.2,<4.0",
    "types-requests>=2.33.0,<3.0",
    "bandit>=1.9.4,<2.0",
    "pytest-mock>=3.15.1,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devmind", "apps"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "devmind.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "devmind.settings.base"

[tool.black]
line-length = 88
target-version = ["py312"]
