[tool.poetry]
name = "devmind-fastapi"
version = "0.1.0"
description = "DevMind FastAPI AI engine"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
pydantic = "^2.7"
pydantic-settings = "^2.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
pgvector = "^0.3"
openai = "^1.35"
httpx = "^0.27"
sentry-sdk = {extras = ["fastapi"], version = "^2.5"}
structlog = "^24.2"
tenacity = "^8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.27"
anyio = {extras = ["trio"], version = "^4.4"}
ruff = "^0.4"
black = "^24.4"
mypy = "^1.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-omit=tests/* --cov-report=term-missing --cov-fail-under=95"

[tool.ruff]
line-length = 88
target-version = "py312"
