[project]
name = "devmind-fastapi"
version = "0.1.0"
description = "DevMind FastAPI AI engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<0.30",
    "pgvector>=0.3,<0.4",
    "openai>=1.35,<2.0",
    "httpx>=0.27,<0.28",
    "sentry-sdk[fastapi]>=2.5,<3.0",
    "structlog>=24.2,<25.0",
    "tenacity>=8.3,<9.0",
    "langgraph>=0.2,<1.0",
    "tiktoken>=0.7,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "anyio[trio]>=4.4,<5.0",
    "black>=24.4,<25.0",
    "mypy>=1.10,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "routers", "services", "models", "agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --cov-fail-under=95"

[tool.black]
line-length = 88
target-version = ["py312"]
